Fix alignment of expanded sidebar title at md/lg breakpoints

--- a/frontend/css/layout/_sidebar.scss
+++ b/frontend/css/layout/_sidebar.scss
@@ -198,6 +198,10 @@
         padding: 10px 15px;
         justify-content: flex-start;
 
+        img {
+          margin: 0;
+        }
+
         .title-large {
           display: block;
         }
